import the correct style file + dark mode :)

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -1,57 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-
-/* shadcn/ui colors */
-:root {
-    /* Default background color of <body />...etc */
-    --background: 0 0% 100%;
-    --foreground: 222.2 47.4% 11.2%;
-
-    /* Muted backgrounds such as <TabsList />, <Skeleton />and <Switch /> */
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    /* Background color for <Card /> */
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
-
-    /* Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover /> */
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
-
-    /* Default border color  */
-    --border: 214.3 31.8% 91.4%;
-
-    /* Border color for inputs such as <Input />, <Select />, <Textarea /> */
-    --input: 214.3 31.8% 91.4%;
-
-    /* Primary colors for <Button /> */
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    /* Secondary colors for <Button /> */
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    /* Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc  */
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    /* Used for destructive actions such as <Button variant="destructive"> */
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 222.2 47.4% 11.2%;
-
-    /* Used for focus ring  */
-    --ring: 215 20.2% 65.1%;
-
-    /* Border radius for card, input and buttons  */
-    --radius: 0.5rem;
-}
-
-
 input.invalid-input {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
